feat: build and print version after release aciton

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,3 +15,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: simple
           bump-minor-pre-major: true
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+      - run:  make func
+      - run:  ./func version
+      - run:  ./func version --verbose
