--- a/.github/workflows/pull_requests.yaml
+++ b/.github/workflows/pull_requests.yaml
@@ -7,7 +7,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        # os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        os: ["macos-latest"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
