--- a/.github/workflows/pull_requests.yaml
+++ b/.github/workflows/pull_requests.yaml
@@ -17,8 +17,8 @@ jobs:
           go-version: "^1.16"
       - name: Clear Cache
         run: go clean -modcache -testcache -cache
-      - name: Unit Test
-        run: go test ./...
       - name: Build
-        run: go build -v ./cmd/func
+        run: |
+          ls -als vendor/sigs.k8s.io/kustomize/api/internal/target && \
+          go build -v ./knative
 
