--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
       - uses: actions/setup-java@v1
         with:
           java-version: '11'
@@ -56,6 +58,8 @@ jobs:
           git push origin v${{steps.release.outputs.major}}.${{steps.release.outputs.minor}}.${{steps.release.outputs.patch}} || true
 
       - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
 
       # Standard build tasks
       - name: Build
