--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /func
 /func_*
-/templates/go/events/go.sum
+/templates/go/cloudevents/go.sum
 /templates/go/http/go.sum
-/templates/typescript/events/build
+/templates/typescript/cloudevents/build
 /templates/typescript/http/build
 /coverage.out
 /bin
