--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -4,17 +4,11 @@ on: [pull_request]
 
 jobs:
   check:
-    name: Check Source
-    strategy:
-      matrix:
-        go: [1.20.x]
-        os: ["ubuntu-latest"]
-    runs-on: ${{ matrix.os }}
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: ${{ matrix.go }}
+          go-version: "1.20.x"
       - name: Check
         run: make check
-
