reorganize python scaffolding

--- a/templates/python/scaffolding/instanced-http/pyproject.toml
+++ b/templates/python/scaffolding/instanced-http/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-func-python = "^0.1.0"
-
+func-python = ">=0.1.0"
+function = { path = "./f" }
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
