--- a/templates/python/http/pyproject.toml
+++ b/templates/python/http/pyproject.toml
@@ -1,16 +1,18 @@
-[tool.poetry]
+[project]
 name = "function"
-version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.1.0"
+requires-python = ">=3.10"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-
-[tool.poetry.group.dev.dependencies]
-httpx = "^0.27.2"
+license = "MIT"
+dependencies = [
+  "httpx"
+]
+authors = [
+  { name="Your Name", email="you@example.com"},
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
